--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 </head>
 <body>
-    <h1 class="text-center bg-red-200">Hackers Poulette</h1>
+    <h1 class="">Hackers Poulette</h1>
     <form id = "form" action="./Php/read.php" method="post" enctype="multipart/form-data">
         <div class="form_nom">
             <label  for="nom">Nom</label>
