--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body class="bg-zinc-900 text-sm sm:text-m">
-    <div class="flex flex-col w-1/2 border-solid border-2 border-zinc-400 rounded-xl mx-auto p-3 mt-10 bg-zinc-700/50 shadow-[0_0_2px_#fff,inset_0_0_2px_#fff,0_0_5px_#fff,0_0_15px_#fff,0_0_30px_#fff]">
-        <h1 class="text-xl font-bold p-2 text-center w-1/2 bg-zinc-900/75 hover:bg-zinc-700 hover:underline rounded-xl self-center shadow-[0_0_2px_#fff,inset_0_0_2px_#fff,0_0_5px_#fff,0_0_15px_#fff,0_0_30px_#fff] text-slate-100">
+    <div
+        class="flex flex-col w-1/2 border-solid border-2 border-zinc-400 rounded-xl mx-auto p-3 mt-10 bg-zinc-700/50 shadow-[0_0_2px_#fff,inset_0_0_2px_#fff,0_0_5px_#fff,0_0_15px_#fff,0_0_30px_#fff]">
+        <h1
+            class="text-xl font-bold p-2 text-center w-1/2 bg-zinc-900/75 hover:bg-zinc-700 hover:underline rounded-xl self-center shadow-[0_0_2px_#fff,inset_0_0_2px_#fff,0_0_5px_#fff,0_0_15px_#fff,0_0_30px_#fff] text-slate-100">
             Hackers Poulette</h1>
         <form id="form" class="form flex flex-col" action="./Php/read.php" method="post" enctype="multipart/form-data">
 
