--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     for="nom">Nom</label>
                 </br>
                 <input id="nom" type="text" name="nom" value="" class="p-2 mt-3 w-full rounded-xl text-black">
-                <span id="nom-error" class="error-message"></span>
+                <span id="nom-invalide" class="invalide-message"></span>
             </div>
 
             <div class="form_prenom mt-3">
@@ -34,7 +34,7 @@
                     for="prenom">Prénom</label>
                 </br>
                 <input id="prenom" type="text" name="prenom" value="" class="p-2 mt-3 w-full rounded-xl text-black">
-                <span id="prenom-error" class="error-message"></span>
+                <span id="prenom-invalide" class="invalide-message"></span>
             </div>
 
             <div class="form_mail mt-3">
@@ -43,7 +43,7 @@
                     for="mail">Adresse mail</label>
                 </br>
                 <input id="mail" type="text" name="mail" value="" class="p-2 mt-3 w-full rounded-xl text-black">
-                <span id="mail-error" class="error-message"></span>
+                <span id="mail-invalide" class="invalide-message"></span>
             </div>
 
             <div class="form_description mt-3">
@@ -52,7 +52,7 @@
                     for="description">Décrire votre problème</label>
                 </br>
                 <input id="description" type="text" name="description" value="" class="p-2 mt-3 w-full rounded-xl text-black">
-                <span id="description-error" class="error-message"></span>
+                <span id="description-invalide" class="invalide-message"></span>
             </div>
 
             <div class="form_photo mt-3">
@@ -66,7 +66,7 @@
                 file:text-sm file:font-bold
                 file:bg-zinc-500 file:text-zinc-900
                 hover:file:bg-zinc-600">
-                <span id="photo-error" class="error-message"></span>
+                <span id="photo-invalide" class="invalide-message"></span>
             </div>
 
             <div class="form_boutton mt-3 self-center">
